[package]
name = "neat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
errorfunctions = "0.2.0"
itertools = "0.12.0"
num = "0.4.1"
proptest = "1.4.0"
rand = "0.8.5"
tinyvec = { version = "1.6.0", features = ["alloc"] }
